--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -534,7 +534,12 @@ form {
   padding: 40px 20px;
 }
 
-// Update the full-width image styles
+.full-width-container {
+  width: 100vw;
+  margin-left: 50%;
+  transform: translateX(-50%);
+}
+
 .full-width-image {
   width: 100vw;
   max-width: 100vw;
@@ -543,50 +548,52 @@ form {
   height: auto;
 }
 
-// Update blog styles
-.blog-container {
-  @extend .content-container;
-}
+// Update page header styles
+.page-header {
+  @extend .full-width-container;
+  background-color: $header-bg-color;
+  padding: 60px 0;
+  margin-bottom: 40px;
 
-.post-list {
-  list-style: none;
-  padding: 0;
-
-  li {
-    margin-bottom: 40px;
-    padding-bottom: 40px;
-    border-bottom: 1px solid $accent-color;
-
-    &:last-child {
-      border-bottom: none;
-    }
-  }
-
-  h2 {
-    margin-bottom: 10px;
+  h1 {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 0 20px;
+    color: $primary-bg-color;
   }
 }
 
-.post-meta {
-  color: #666;
-  font-size: 0.9em;
-  margin-bottom: 15px;
+// Update hero section styles
+.hero {
+  @extend .full-width-container;
+  // ... (rest of hero styles)
 }
 
-.blog-post {
-  img {
-    @extend .full-width-image;
-  }
-}
-
-// Update other sections to use the new container
-.introduction, .services-highlights, .featured-solution {
-  @extend .content-container;
-}
-
+// Update featured solution styles
 .featured-solution {
+  @extend .full-width-container;
   background-color: $eggshell;
-  margin-left: calc(-50vw + 50%);
-  margin-right: calc(-50vw + 50%);
-  padding: 40px calc(50vw - 50% + 20px);
+  padding: 60px 0;
+
+  .featured-content {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 0 20px;
+  }
 }
+
+// Update footer CTA styles
+.footer-cta {
+  @extend .full-width-container;
+  background-color: $secondary-accent-color;
+  padding: 60px 0;
+  text-align: center;
+
+  p {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 0 20px;
+  }
+}
+
+// ... (rest of the styles remain unchanged)
