--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,11 @@
   {% include head.html %}
   <body>
     {% include header.html %}
+    {% if page.title %}
+    <div class="page-header">
+      <h1>{{ page.title }}</h1>
+    </div>
+    {% endif %}
     <main class="content-container">
       {{ content }}
     </main>
