--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,12 +3,7 @@
   {% include head.html %}
   <body>
     {% include header.html %}
-    {% if page.title %}
-    <div class="page-header">
-      <h1>{{ page.title }}</h1>
-    </div>
-    {% endif %}
-    <main class="content-container">
+    <main {% if page.layout == 'home' %}class="home-content"{% else %}class="page-content"{% endif %}>
       {{ content }}
     </main>
     {% include footer.html %}
