--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,9 +1,9 @@
 ---
 layout: default
 ---
-<section class="page-header">
+<header class="page-header">
   <h1>{{ page.title }}</h1>
-</section>
-<section class="page-content">
+</header>
+<article class="page-content">
   {{ content }}
-</section>
+</article>
