--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,17 +1,19 @@
 <header>
-  <div class="logo">
-    <a href="{{ '/' | relative_url }}">
-      <img src="{{ '/assets/images/logo.png' | relative_url }}" alt="Tuba Tech Dynamics Logo">
-    </a>
+  <div class="header-wrapper">
+    <div class="logo">
+      <a href="{{ '/' | relative_url }}">
+        <img src="{{ '/assets/images/logo.png' | relative_url }}" alt="Tuba Tech Dynamics Logo">
+      </a>
+    </div>
+    <nav>
+      <ul>
+        <li><a href="{{ '/' | relative_url }}">Home</a></li>
+        <li><a href="{{ '/services' | relative_url }}">Services</a></li>
+        <li><a href="{{ '/portfolio' | relative_url }}">Portfolio</a></li>
+        <li><a href="{{ '/blog' | relative_url }}">Blog</a></li>
+        <li><a href="{{ '/about' | relative_url }}">About</a></li>
+        <li><a href="{{ '/contact' | relative_url }}">Contact</a></li>
+      </ul>
+    </nav>
   </div>
-  <nav>
-    <ul>
-      <li><a href="{{ '/' | relative_url }}">Home</a></li>
-      <li><a href="{{ '/services' | relative_url }}">Services</a></li>
-      <li><a href="{{ '/portfolio' | relative_url }}">Portfolio</a></li>
-      <li><a href="{{ '/blog' | relative_url }}">Blog</a></li>
-      <li><a href="{{ '/about' | relative_url }}">About</a></li>
-      <li><a href="{{ '/contact' | relative_url }}">Contact</a></li>
-    </ul>
-  </nav>
 </header>
