--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,6 +4,6 @@ layout: default
 <header class="page-header">
   <h1>{{ page.title }}</h1>
 </header>
-<article class="page-content">
+<article class="page-content content-wrapper">
   {{ content }}
 </article>
