--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,14 +1,21 @@
 ---
 layout: default
 ---
-<article class="blog-post">
+<header class="post-header">
+  <h1>{{ page.title }}</h1>
   <p class="post-meta">
     <time datetime="{{ page.date | date_to_xmlschema }}">
-      {{ page.date | date: "%B %-d, %Y" }}
+      {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
+      {{ page.date | date: date_format }}
     </time>
-    {% if page.author %}
-      • <span>{{ page.author }}</span>
-    {% endif %}
+    {%- if page.author -%}
+      • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span>
+    {%- endif -%}
   </p>
-  {{ content }}
+</header>
+
+<article class="blog-post content-wrapper">
+  <div class="post-content">
+    {{ content }}
+  </div>
 </article>
