fixes adn newsletter

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,15 +23,7 @@
     <div class="footer-section newsletter">
       <h3>Stay Updated</h3>
       <p>Subscribe to our newsletter for the latest updates and insights.</p>
-      <!-- MailerLite Universal -->
-      <script>
-        (function(w,d,e,u,f,l,n){w[f]=w[f]||function(){(w[f].q=w[f].q||[])
-        .push(arguments);},l=d.createElement(e),l.async=1,l.src=u,
-        n=d.getElementsByTagName(e)[0],n.parentNode.insertBefore(l,n);})
-        (window,document,'script','https://assets.mailerlite.com/js/universal.js','ml');
-        ml('account', '1128411');
-      </script>
-      <!-- End MailerLite Universal -->
+      <div class="ml-embedded" data-form="Sj4ePv"></div>
     </div>
   </div>
   <div class="footer-bottom">
