--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,16 +1,24 @@
 <header>
   <div class="header-wrapper">
-    <div class="logo">
-      <a href="{{ '/' | relative_url }}">
-        <img src="{{ '/assets/images/logo.png' | relative_url }}" alt="Tuba Tech Dynamics Logo">
-      </a>
+    <div class="menu-logo-wrapper">
+      <button class="menu-toggle" aria-label="Toggle menu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+      <div class="logo">
+        <a href="{{ '/' | relative_url }}">
+          <img src="{{ '/assets/images/logo.png' | relative_url }}" alt="Tuba Tech Dynamics Logo">
+        </a>
+      </div>
     </div>
     <nav>
       <ul>
         <li><a href="{{ '/' | relative_url }}">Home</a></li>
         <li><a href="{{ '/services' | relative_url }}">Services</a></li>
-        <li><a href="{{ '/portfolio' | relative_url }}">Portfolio</a></li>
+        <!-- <li><a href="{{ '/portfolio' | relative_url }}">Portfolio</a></li> -->
         <li><a href="{{ '/blog' | relative_url }}">Blog</a></li>
+        <li><a href="{{ '/resources' | relative_url }}">Resources</a></li>
         <li><a href="{{ '/about' | relative_url }}">About</a></li>
         <li><a href="{{ '/contact' | relative_url }}">Contact</a></li>
       </ul>
