--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,8 +9,9 @@
       <h3>Quick Links</h3>
       <ul>
         <li><a href="{{ '/services' | relative_url }}">Services</a></li>
-        <li><a href="{{ '/portfolio' | relative_url }}">Portfolio</a></li>
+        <!-- <li><a href="{{ '/portfolio' | relative_url }}">Portfolio</a></li> -->
         <li><a href="{{ '/blog' | relative_url }}">Blog</a></li>
+        <li><a href="{{ '/resources' | relative_url }}">Resources</a></li>
         <li><a href="{{ '/about' | relative_url }}">About</a></li>
         <li><a href="{{ '/contact' | relative_url }}">Contact</a></li>
       </ul>
