--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -42,7 +42,6 @@ body {
 
 // Typography
 h1, h2, h3, h4, h5, h6 {
-  color: $primary-text-color;
   line-height: 1.2;
 }
 
@@ -213,8 +212,8 @@ main {
   position: relative;
   overflow: hidden;
 
-  h1 {
-    color: $eggshell;
+  > h1 {
+    color: $eggshell !important; // Add !important to override the general style
     max-width: 800px;
     margin: 0 auto;
     padding: 0 20px;
