--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,5 +25,6 @@
       ml('account', '1128411');
     </script>
     <!-- End MailerLite Universal -->
+    <script src="{{ '/assets/js/main.js' | relative_url }}"></script>
   </body>
 </html>
