--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -128,6 +128,7 @@ header {
     align-items: center;
     flex-wrap: nowrap;
     padding: 0 20px;
+    position: relative;
   }
 
   .logo {
@@ -164,6 +165,73 @@ header {
 
       &:hover, &:focus {
         color: $cta-color;
+      }
+    }
+  }
+
+  .menu-toggle {
+    display: none; // Hide by default for larger screens
+    background: none;
+    border: none;
+    color: $accent-color;
+    font-size: 1.5rem;
+    cursor: pointer;
+    padding: 10px; // Add some padding for easier tapping
+    z-index: 1000;
+  }
+}
+
+// Update the media query for smaller screens
+@media (max-width: 768px) {
+  header {
+    .header-wrapper {
+      justify-content: center;
+    }
+
+    .menu-toggle {
+      display: block !important;
+      position: absolute;
+      left: 20px;
+      top: 50%;
+      transform: translateY(-50%);
+
+      span {
+        display: block;
+        width: 25px;
+        height: 3px;
+        background-color: $accent-color;
+        margin: 5px 0;
+      }
+    }
+
+    nav {
+      position: fixed;
+      top: 0;
+      left: -100%;
+      width: 80%;
+      height: 100vh;
+      background-color: $header-bg-color;
+      padding: 80px 20px 20px;
+      transition: left 0.3s ease;
+      z-index: 999;
+
+      &.active {
+        left: 0;
+      }
+
+      ul {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
+      li {
+        width: 100%;
+        margin-bottom: 10px;
+      }
+
+      a {
+        display: block;
+        padding: 10px 0;
       }
     }
   }
