--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -980,3 +980,70 @@ form {
 .copy-button:hover {
   opacity: 1;
 }
+
+// Blockquote styles
+blockquote {
+  background-color: lighten($eggshell, 5%);
+  border-left: 5px solid $cta-color;
+  margin: 1.5em 0;
+  padding: 1.5em 1.5em 1em 3em;
+  position: relative;
+  color: $licorice;
+  box-shadow: 0 2px 15px rgba(0,0,0,0.1);
+
+  &::before {
+    content: '\201C';
+    font-size: 4em;
+    font-family: Georgia, serif;
+    color: rgba($cta-color, 0.2);
+    position: absolute;
+    left: 10px;
+    top: -10px;
+    line-height: 1;
+  }
+
+  p {
+    margin: 0;
+    line-height: 1.6;
+    position: relative;
+    z-index: 1;
+    font-style: italic;
+    font-size: 1.1em;
+  }
+
+  cite {
+    display: block;
+    margin-top: 1em;
+    font-size: 0.9em;
+    color: darken($licorice, 20%);
+    font-style: normal;
+    text-align: right;
+    font-weight: bold;
+
+    &::before {
+      content: '— ';
+      font-weight: normal;
+    }
+  }
+}
+
+// Media query for smaller screens
+@media (max-width: 768px) {
+  blockquote {
+    padding: 1.2em 1em 1em 2.5em;
+
+    &::before {
+      font-size: 3em;
+      left: 5px;
+      top: -5px;
+    }
+
+    p {
+      font-size: 1em;
+    }
+
+    cite {
+      font-size: 0.8em;
+    }
+  }
+}
