--- a/src/_includes/default.njk
+++ b/src/_includes/default.njk
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  {% include head.html %}
+  {% include "head.njk" %}
   <body>
-    {% include header.html %}
+    {% include "header.njk" %}
     <main>
-      {{ content }}
+      {{ content | safe }}
     </main>
-    {% include footer.html %}
+    {% include "footer.njk" %}
     <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
     <script>
