--- a/src/_includes/head.njk
+++ b/src/_includes/head.njk
@@ -1,8 +1,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{{ page.meta_title | default: site.seo_title }}</title>
-  <meta name="description" content="{{ page.meta_description | default: site.seo_description }}">
+  <title>{{ (page.meta_title or page.title) or site.seo_title }}</title>
+  <meta name="description" content="{{ page.meta_description or site.seo_description }}">
   <meta name="keywords" content="Non-profit technology solutions, Custom internal applications for non-profits, AI-powered visualizations, Public engagement tools for non-profits, Tuba Tech Dynamics, Non-profit data analytics, Non-profit custom software development">
   <link rel="stylesheet" href="{{ '/assets/css/styles.css' | relative_url }}">
   <link rel="icon" href="{{ '/assets/images/favicon.ico' | relative_url }}" type="image/x-icon">
