--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -28,6 +28,6 @@
     </div>
   </div>
   <div class="footer-bottom">
-    <p>&copy; {{ site.time | date: "%Y" }} Tuba Tech Dynamics. All rights reserved.</p>
+    <p>&copy; {{ year }} Tuba Tech Dynamics. All rights reserved.</p>
   </div>
 </footer>
